--- a/app/templates/genmp3.html
+++ b/app/templates/genmp3.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DONE</title>
 </head>
+
 <body>
     <b>These Songs Have Been Downloaded!</b>
     <div>
         {% for name in titles %}
-      <p>{{ name }} </p>
-  {% endfor %}
+        <p>{{ name }} </p>
+        {% endfor %}
     </div>
 
     <form action="/" method="post">
         <input type="submit" value="Download More">
     </form>
 </body>
+
 </html>
