--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,16 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Spotify2Mp3</title>
+    <title>Spotify2Mp3 App</title>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Download MP3 from Spotify Playlist</h1>
-    <form action="genmp3" method="post">
-        <b>Note: be patient while playlist is downloading</b>
-        <div>Spotify Playlist Link:</div> <input name="url">
-        <input type="submit" value="Submit">
-    </form>
+    <div class="cont">
+        <h1>Download MP3 from Spotify Playlist</h1>
+        <form action="genmp3" method="post">
+            <b>Note: be patient while playlist is downloading, zip file will download when it it done</b>
+            <div class="link-entry">Spotify Playlist Link:</div> <input name="url">
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+    
 
 </body>
 
