generates youtube playlist

--- a/app/templates/genmp3.html
+++ b/app/templates/genmp3.html
@@ -19,6 +19,8 @@
     <form action="/" method="post">
         <input type="submit" value="Download More">
     </form>
+
+    <p id="playlist">fhfhfh{{ playlist_url }}</p>
 </body>
 
 </html>
