patched for yt-dlp

--- a/app/templates/genmp3.html
+++ b/app/templates/genmp3.html
@@ -20,7 +20,7 @@
         <input type="submit" value="Download More">
     </form>
 
-    <p id="playlist">fhfhfh{{ playlist_url }}</p>
+    <p id="playlist">{{ playlist_url }}</p>
 </body>
 
 </html>
