--- a/app/templates/download.html
+++ b/app/templates/download.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Download Page</title>
 </head>
 <body>
-    <h1>Your Downloads have finished!!!</h1>
+    <div class="container">
+        <h1>Your files are ready for download!</h1>
+
+        <a class="btn btn-primary" href="{{url_for('download')}}">Download</a>
+    </div>
 </body>
 </html>
