updated to keep working in 2023/24. updated web page styling and added playlist image displayed on download

--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -16,3 +16,14 @@ footer {
 .link-entry{
     margin-top: 30px;
 }
+
+.btn {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+img {
+    margin-top: 30px;
+    width: 30%;
+    height: auto;
+}
