--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,11 +11,13 @@
 <body>
     <div class="cont">
         <h1>Download MP3 from Spotify Playlist</h1>
-        <form action="genmp3" method="post">
-            <b>Note: be patient while playlist is downloading, zip file will download when it it done</b>
+        <form action="generate" method="post">
+            <b>Note: You will be taken to the download page when the program has finished generating</b>
             <div class="link-entry">Spotify Playlist Link:</div> <input name="url">
             <input type="submit" value="Submit">
         </form>
+        
+
         {% if playlist_url %}
         <p id="playlist">{{ playlist_url }}</p>
         {% endif %}
@@ -27,7 +29,7 @@
 </body>
 
 <footer>
-    <p>Made by Noah Vendrig 2022</p>
+    <p>Made by Noah Vendrig 2022-23</p>
     <a href="http://noahvendrig.com">noahvendrig.com</a>
 
 </footer>
